# Python-Vuln-Tracker

./: Dockerfile  Dockerfile.dev  README.md  SLIDES.md  TECHNICAL_OVERVIEW.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  run.dev.sh  run.perf.sh  run.sh  run.test.sh
exemple-data/: requirements.txt
src/: main.py
src/api/: dependencies.py  projects.py
src/domain/: dependency.py  project.py
src/infra/: storage.py
src/schemas/: dependency.py  project.py
src/services/: osv_client.py  tasks.py
src/utils/: cache.py  execution_time_middleware.py  performance_monitor.py  requirements_parser.py
tests/: test_main.py
tests/api/: test_dependencies.py  test_projects.py
tests/domain/: test_domain_dependency.py  test_domain_project.py
tests/infra/: test_storage.py
tests/schemas/: test_schemas_dependency.py  test_schemas_project.py
tests/services/: test_osv_client.py  test_tasks.py
tests/utils/: test_cache.py  test_requirements_parser.py
