[tool.poetry]
name = "python-vuln-tracker"
version = "0.1.0"
description = "FastAPI service that tracks Python dependency vulnerabilities via osv.dev"
authors = ["Jad Yammine"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.8.15"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"