[tool.poetry]
name = "python-vuln-tracker"
version = "0.1.0"
description = "FastAPI service that tracks Python dependency vulnerabilities via osv.dev"
authors = ["Jad Yammine"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = {extras = ["http2"], version = "^0.27.0"}
pydantic = "^2.7.1"
uvloop = "^0.21.0"
orjson = "^3.9.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.15"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]